<resources>
    <string name="app_name">AppFilm</string>
    <string name="desc_poster">poster</string>
    <string name="back">Back</string>
    <string name="pg_13">13+</string>
    <string name="avengers_end_game">Avengers: End Game</string>
    <string name="action_adventure_fantasy">Action, Adventure, Fantasy</string>
    <string name="storyline">Storyline</string>
    <string name="storyline_content">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="cast">Cast</string>
    <string name="robert_downey_jr">Robert Downey Jr.</string>
    <string name="chris_evans">Chris Evans</string>
    <string name="chris_hemsworth">Chris Hemsworth</string>
    <string name="mark_ruffalo">Mark Ruffalo</string>
    <string name="desc_poster_item">постер фильма</string>
    <string name="desc_favourite">Избранное</string>
    <string name="ic_movie_list">знак фильмов</string>
    <string name="desc_avatar_actor">фото актера</string>
    <string name="movies_list">Movies List</string>
    <string name="desc_ign">sign</string>
    <string name="min">MIN</string>
    <string name="reviews">REVIEWS</string>
    <string name="plus">+</string>

</resources>