<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_poster"
            android:layout_width="0dp"
            android:layout_height="@dimen/poster_height"
            android:scaleType="centerCrop"
            android:contentDescription="@string/desc_poster"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/poster" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="@dimen/poster_height"
            android:contentDescription="@string/desc_poster"
            android:src="@drawable/gradient"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/movie_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/movie_details_margin"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:id="@+id/tv_back"
                android:layout_width="match_parent"
                android:layout_height="@dimen/back_height"
                android:layout_marginTop="28dp"
                android:alpha="0.25"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:paddingStart="2dp"
                android:paddingEnd="2dp"
                android:text="@string/back"
                android:textColor="@color/white"
                app:drawableStartCompat="@drawable/ic_back" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/title_margin_top"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tv_pg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pg_13"
                    android:textColor="@color/white"
                    android:textSize="@dimen/size_pg_13"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingMultiplier="0.9"
                    android:text="@string/avengers_end_game"
                    android:textColor="@color/white"
                    android:textSize="@dimen/size_name"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_tag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_adventure_fantasy"
                android:textColor="@color/text_red"
                android:textSize="@dimen/size_tag" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/rating_height"
                android:layout_marginTop="4dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <RatingBar
                    android:id="@+id/rb_stars"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:rating="4"
                    android:numStars="5"
                    android:isIndicator="true"
                    style="@style/starRatingBar"/>

                <TextView
                    android:id="@+id/tv_reviews"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="9dp"
                    android:text="@string/reviews"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="@dimen/size_reviews"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/storyline"
                    android:textColor="@color/color_white1"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_storyline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:alpha="0.75"
                    android:letterSpacing="0.08"
                    android:text="@string/storyline_content"
                    android:textColor="@color/white" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_cast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="7dp"
                android:text="@string/cast"
                android:textColor="@color/color_white1"
                android:textStyle="bold" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_actors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/movie_details"
            android:paddingStart="16dp"
            android:clipToPadding="false"
            android:paddingEnd="16dp"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>